Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: 10.4.8
-
Fix Version/s: 10.4.12
-
Component/s: Platform Windows
-
Labels:
-
Environment:Windows Server 2012 R2 / Windows 10 Enterprise
Description
We run MariaDB 10.4.8 with the parameter datadir as network resource (UNC-Path)
Our configuration:
---------------------------------------------------------------------
|
[mysqld]
|
datadir = //STA-WS001/MariaDBData/Data
|
port = 3306
|
innodb_buffer_pool_size = 2033M
|
character-set-server = utf8
|
[client]
|
port = 3306
|
plugin-dir = C:/Program Files/MariaDB 10.4/lib/plugin
|
---------------------------------------------------------------------
|
The mariadb-error-log shows the following entries as soon a new InnoDB-table is created ("CREATE TABLE ..."):
2019-12-09 16:20:30 36 [ERROR] InnoDB: Operating system error number 3 in a file operation.
|
2019-12-09 16:20:30 36 [ERROR] InnoDB: The error means the system cannot find the path specified.
|
2019-12-09 16:20:30 36 [ERROR] InnoDB: File \\.\\\STA-WS001\MariaDBData: 'CreateFile()' returned OS error 203.
|
If we set "innodb_file_per_table = OFF" the problem is not showing up.